--- a/style.css
+++ b/style.css
@@ -9,6 +9,8 @@
     --body-color: hsl(250, 60%, 98%);
     --container-color:#fff;
     --shadow:  hsla(0, 0%, 15%, 1);
+    --scroll-bar-color:hsl(250,12%,90%);
+    --scroll-thumb-color:hsl(250,12%,80%);
     --body-font: 'Poppins', sans-serif;
     --biggest-font-size: 4rem;
     --hl-font-size: 2.25rem;
@@ -28,6 +30,7 @@
     --mb-3: 3rem;
     --z-tooltip: 10;
     --z-fixed: 100;
+    
 
 }
 @media screen and (max-width: 992px) {
@@ -668,3 +671,195 @@ input{
     right: 0;
 }
 
+/* =========================Steps Section */
+
+.steps__bg{
+    background-color: var(--container-color);
+    padding: 3.5rem 2.5rem;
+    border-radius: 1rem;
+}
+
+.steps__container {
+    grid-template-columns: repeat(3,1fr);
+    column-gap: 2rem;
+    padding-top: 1rem;
+}
+
+.steps__card {
+    background-color: var(--body-color);
+    padding: 2.5rem 3rem 2rem 1.5rem;
+    border-radius: 1rem;
+}
+
+.steps__card-number{
+    display: inline-block;
+    background-color: var(--first-color);
+    color: #fff;
+    padding: .5rem .75rem;
+    border-radius: .25rem;
+    font-size: var(--h2-font-size);
+    margin-bottom: var(--mb-1-5);
+    transition: .3s;
+}
+ 
+.steps__card-title {
+    font-size: var(--normal-font-size);
+    margin-bottom:var(--mb-0-5)  ;
+}
+
+/* .steps__card-description {
+    font-size: var(--small-font-size);
+} */
+
+.steps__card:hover .steps__card-number {
+    transform: translateY(-.25rem);
+}
+
+.newsLetter__container {
+    display: grid;
+    grid-template-columns: .5fr;
+    justify-content: center;
+}
+
+.newsLetter__description{
+    padding: 0 3rem;
+    text-align: center;
+    margin-bottom: var(--mb-1-5)
+}
+
+
+
+.newsLetter__form {
+    background-color: var(--container-color);
+    padding: 1rem;
+    display: flex;
+    justify-content: space-between;
+    border-radius: .75rem;
+}
+
+.newsLetter__input{
+    width: 70%;
+    padding: 0 .5rem;
+    background: none;
+    color: var(--title-color);
+}
+
+/* ================FOOTER=============== */
+.footer {
+    position: relative;
+    overflow: hidden;
+}
+
+.footer__content {
+    grid-template-columns: repeat(4,1fr);
+    justify-content: center;
+    column-gap: 1rem;
+}
+
+.footer__logo {
+    color: var(--title-color);
+    text-transform: lowercase;
+    font-weight: var(--font-bold);
+    letter-spacing: 1px;
+    display: inline-flex;
+    align-items: center;
+    column-gap: .25rem;
+    margin-bottom: var(--mb-1);
+}
+
+.footer__logo-icon{
+    font-size: 1rem;
+}
+
+
+
+.footer__description{
+    margin-bottom: var(--mb-2-5);
+}
+
+.footer__social{
+    display: flex;
+    column-gap: .75rem;
+}
+
+.footer__social-link{
+    display: inline-flex;
+    background: var(--container-color);
+    padding: .25rem;
+    border-radius: .25rem;
+    color: var(--title-color);
+    font-size: 1rem;
+}
+
+
+.footer__social-link:hover{
+    background: var(--first-color);
+    color: #fff;
+}
+
+.footer__title{
+    font-size: var(--h3-font-size);
+    margin-bottom: var(--mb-1);
+}
+
+.footer__links {
+    display: grid;
+    row-gap: .35rem;
+}
+
+.footer__link{
+    /* font-size: var(--small-font-size); */
+    color: var(--text-color);
+    transition: .3s;
+}
+
+.footer__link:hover{
+    color: var(--title-color);
+}
+
+.footer__copy{
+    display: block;
+    text-align: center;
+    /* font-size: var(--small-font-size) ; */
+    margin-top: .6rem ;
+}
+
+/* scroll uppppppppppp */
+.scrollup{
+    position: fixed;
+    right: 1rem;
+    bottom: -30%;
+    background: var(--first-color);
+    border-radius: .4rem;
+    padding: .25rem;
+    z-index: var(--z-tooltip);
+    opacity: -8;
+    transition: .4s;
+}
+
+.scrollup:hover {
+    opacity: 1;
+} 
+
+.scrollup__icon {
+    font-size: 1.5rem;
+    color: #fff;
+}
+
+/* show scroll up */
+.show-scoll{
+    bottom: 3rem;
+}
+
+
+/* scroll bar */
+::-webkit-scrollbar{
+    width: .60rem;
+    background: var(--scroll-bar-color);
+    border-radius: .3rem;
+}
+
+::-webkit--scrollbar-thumb{
+    background: var(--scroll-thumb-color);
+    border-radius: .5rem;
+}
