--- a/style.css
+++ b/style.css
@@ -152,6 +152,7 @@ input{
 }
 
 
+.nav__close,
 .login__toggle,
 .nav__logo,
 .nav__toggle,
@@ -205,8 +206,21 @@ input{
     color: var(--first-color );
 }
 
+.nav__close{
+    font-size: 2rem;
+    position: absolute;
+    top: .9rem;
+    right: 1.25rem;
+    cursor:pointer;
+}
+
+.nav__close,
 .nav__toggle{
     display: none;
+}
+/* show menu  */
+.show-menu {
+    right: 0;
 }
 
 .active-link{
@@ -863,3 +877,133 @@ input{
     background: var(--scroll-thumb-color);
     border-radius: .5rem;
 }
+
+
+
+/* for large devies */
+@media screen and (max-width: 1200px) {
+    .home__imgs{
+        height:400px
+    }
+}
+
+@media screen and (max-width: 992px) {
+    .container {
+        margin-left: var(--mb-1-5);
+        margin-right: var(--mb-1-5);
+    }
+
+    .section__title{
+        font-size: var(--h2-font-size);
+        margin-bottom: var(--mb-2);
+    }
+    .home__content {
+        padding: 8rem 0 2rem;
+    }
+
+    .home__img {
+        height: 300px;
+        transform: translateY(0);
+    }
+
+    .home__indicator {
+        bottom: initial;
+        left: initial;
+        top: 7rem;
+        right: 2rem;
+    }
+
+    .home__indicator::after {
+        top: -3rem;
+        height: 48px;
+    }
+
+    .home__details-img{
+        right: .5rem;
+        bottom:initial;
+    }
+
+    .home__description {
+        padding-right: 0;
+    }
+
+
+    .swiper-pagination {
+        margin-top: var(--mb-2);
+    } 
+
+    .discount__container {
+        column-gap: 3rem;
+    }
+
+    .new__content{
+        width: 242px;
+        padding: 2rem 0 1.5rem 0;
+    }
+
+    .new__img {
+        width: 120px;
+    }
+
+    .new__img,
+    .new__subtitile {
+        margin-bottom: var(--mb-0-5);
+    }
+
+    .new__title{ 
+        font-size: var(--normal-font-size);
+    }
+
+    .steps__bg{
+        padding: 3rem 2rem 2rem;
+    }
+
+    .steps__container {
+        grid-template-columns: repeat(2,1fr);
+        row-gap: 2rem  ;
+    }
+} 
+
+
+/* for medium devies */
+
+@media screen and (max-width:767px) {
+    body {
+        margin: var(--header-height) 0 0 0;
+    }
+    .section {
+        pad: 4.5rem 0 2rem;
+    }
+    
+    .nav {
+        height: var(--header-height);
+    }
+
+    .nav__menu {
+        position: fixed;
+        background-color: var(--body-color);
+        top: 0;
+        right: -100;
+        width: 100%;
+        height: 100%;
+        padding: 6rem 2rem 3.5rem; 
+    }
+
+
+    .new__list {
+        flex-direction: column;
+        row-gap: 2rem;
+    }
+    .nav__toggle,
+    .nav__close {
+        display: block;
+
+    }
+    .home__content {
+        padding: 0;
+        grid-template-columns: 1fr;
+        row-gap: 1rem;
+    }
+}
+
+    
